assets/css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Bpmf+Iansui&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans+Thai:wght@100..800&display=swap');


:root{
--secondary-font: "Bpmf Iansui", cursive;
--primary-font: "Playpen Sans Thai", cursive;
--primary-colour: rgb(92, 149, 44);
--secondary-colour: #8B6D5C;
--theme-colour: rgb(253, 255, 238);
}   

body{
    height: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}


.container {
    background-color: rgb(255, 255, 255);
    width: 80%;
    position: relative;
    border-radius: 10px;
    margin: 30px auto;
    padding: 10px 0px;

}

.container h1, h1 {
    color: var(--primary-colour) !important;
    text-transform: capitalize; 
    font-family: var(--primary-font);
}

.container h2{
    color: rgb(87, 47, 16);
    font-family: var(--secondary-font);
}


.container h3, .container h4, h3{
   text-transform: capitalize; 
   color: var(--secondary-colour) !important;
   font-family: var(--secondary-font);
}

.container-reviews{
    background-color: var(--theme-colour);
    border-radius: 10px;
}

h4.h4-green{
    color: var(--primary-colour) !important;
}

h5 {
    color: var(--secondary-colour);}

footer h2{
    color: pink;
}
footer{
    margin-top: auto;
    width: 100%;
    background-color: rgb(244, 246, 231);
    color: var(--primary-colour);
    font-family: var(--secondary-font);
    bottom: 0;
    position: relative;

}

#footer-span{
    font-size: 10px;
    color: var(--primary-colour);
}

li{
    list-style: none;
}

.send-list{
    margin-bottom: 10px;
    width: 100%;
    color: var(--secondary-colour);
}

.content-info-links a{
    width: 70%;
    border-radius: 5px;
    padding: 3px; 
    text-decoration: none;
    color: var(--secondary-colour); 
    font-size: 20px;
    text-decoration:underline;
}

.funding-list{
    color: var(--secondary-colour);
}

li.info-links{
    color: white;
    background-color: var(--secondary-colour);
    width: 70%;
    border-radius: 5px;
    padding: 3px;   
    
}

li.info-links a{
    list-style: none;          /* removes bullet */
    text-decoration: none;     /* removes underline */
    color: inherit;    
}

.carousel-inner {
    border-radius: 30px;
}
.carousel-item {
    width: 100%;
    
}

.navbar {
    background-color: rgb(244, 246, 231) ;
    font-family: var(--secondary-font);
}

a.nav-link {
    color: var(--primary-colour);
    font-weight: bold;
    font-size: 16px;
}
.nav-link.active {
    color: rgb(87, 47, 16) !important;
}
.nav-link:hover {
    color: #bb947e !important;
}


#form-contact label{
    margin-bottom: 2px;
    margin-top: 20px;
}

#cv-span {
    font-style: italic;
    font-size: smaller;
    margin-left: 5px;
}


.content-section {
    display: none;
}

.content-section.active {
    display: block;
    font-family: var(--secondary-font);
}

.carousel-img {
    height: 450px !important;

    object-fit: cover;    
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    width: 3rem;
    height: 3rem;
    filter: invert(2);
}




iframe {
    width: 100%;
    max-width: 100%;
    display: block;
}

#span-follow, #span-useful, #span-loction{
    color: var(--secondary-colour);

}

#homepage-slogan{
    color: var(--secondary-colour);
}

#enquire-link{
    text-decoration: none;
    color: var(--primary-colour);
}

.homepage-layout{
    display:flex;
    flex-direction:column;
}

/* mobile default */
.hero-section{
    order:1;
}

.enquire-section{
    order:2;
}

.reviews-section{
    order:3;
}



/* ----------------------------------------------Bullet Points*/
.bear-list{
    list-style:none;
    padding-left:0;
}

.bear-list li{
    position:relative;
    padding-left:35px;
    margin-bottom:12px;
}

.bear-list li::before{
    content:"";
    position:absolute;
    left:0;
    top:2px;
    width:22px;
    height:22px;
    background:url("../images/svg/teddy-bear.svg") no-repeat center;
    background-size:contain;
}










/* desktop restore original order */
@media (min-width:768px){

    .hero-section{
        order:2;
    }

    .enquire-section{
        order:3;
    }

    .reviews-section{
        order:1;
    }

}




@media (max-width: 768px) {
    .navbar-nav {
        padding: 10px 0 10px 20px;
    }
}

@media (min-width: 880px){
    a.nav-link {
        font-size: 18px;
        margin: 0px 2px;
       
}
}

@media (min-width: 1000px){
    a.nav-link {
        font-size: 20px;
        margin: 0px 5px;
       
}
}

@media (min-width: 1140px){
    a.nav-link {
        font-size: 26px;
        margin: 0px 3px;
      
}
}

@media (min-width: 2000px){
    a.nav-link {
        font-size: 30px;
        margin: 0px 7px;
        
}
}

